feat: update example 10

--- a/10.md
+++ b/10.md
@@ -1,22 +1,26 @@
-# Axios request
+# Mixin
 
 ```html
-<template>
-  <div>
-    {{ data }}
-  </div>
-</template>
-
 <script>
+  import mixin from "./mixin";
+
   export default {
-    data: () => ({ data: 'DATA' }),
+    mixins: [mixin],
     methods: {
-      submit() {
-        this.$emit('submit', { data: this.data })
-      }
+      reload() {
+        this.refresh();
+      },
     },
   };
 </script>
+```
+
+```javascript
+export default {
+  methods: {
+    refresh() {},
+  },
+};
 ```
 
 <details><summary><b>Answer</b></summary>
@@ -25,14 +29,24 @@
 import { shallowMount } from "@vue/test-utils";
 import Component from "./Component.vue";
 
+const refreshFn = jest.fn();
+const mixin = {
+  methods: {
+    refresh: () => refreshFn(),
+  },
+};
+
 const factory = () => {
-  return shallowMount(Component);
+  return shallowMount(Component, {
+    mixins: [mixin],
+  });
 };
 
 describe("Component.vue", () => {
-  test('submit method should work', async () => {
-    wrapper.vm.submit()
-    expect(wrapper.emitted('submit')).toStrictEqual([['DATA']]);
+  test("reload method should work", () => {
+    const wrapper = factory();
+    wrapper.vm.reload();
+    expect(refreshFn).toBeCalled();
   });
 });
 ```
